--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My Web Dev kurssi</h1>
+
+
+<p>My HTML ja CSS perusteita</p>
+No noita tässä nyt aloitellaan
+</body>
+</html>
 
