--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   
 <body>
 
-<h1>My Web Dev kurssi</h1>
+<h1 style="color:white;text-align:center;">My Web Dev kurssi</h1>
 
 
-<p>My HTML ja CSS perusteita</p>
+<p style="text-align:center;color:white">My HTML ja CSS perusteita</p>
 No noita tässä nyt aloitellaan
 </body>
 </html>
