--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   
 <body>
 
-<h1 style="color:white;text-align:center;">My Web Dev kurssi</h1>
+<h1 style="color:white;text-align:center;">Web Dev kurssi</h1>
 
 
 <p style="text-align:center;color:white">My HTML ja CSS perusteita</p>
 No noita tässä nyt aloitellaan
 </body>
 </html>
-
