--- a/styles.html
+++ b/styles.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <title>Teht 03</title>
     </head> 
     <body>
         <h1>some text</h1>
             <p>some text</p>
-    <div>
+    <div class="div">
         <ul>
             <li>Row 1</li>
             <li>Row 2</li>
